Better alignment for multi action form. Fixes #12.

--- a/campaignForm/action/MultiLocationActionForm.scss
+++ b/campaignForm/action/MultiLocationActionForm.scss
@@ -16,7 +16,7 @@
 
         .ResponseWidget {
             right: 0;
-            bottom: 0;
+            top: -0.25em;
         }
     }
 }
