--- a/campaignForm/action/MultiShiftActionForm.scss
+++ b/campaignForm/action/MultiShiftActionForm.scss
@@ -4,6 +4,6 @@
 
     .ResponseWidget {
         right: 0;
-        bottom: 0;
+        top: -0.25em;
     }
 }
